# ASM

./: .gitmodules  CMakeLists.txt  README.md
assembly_learning/exam_exersise/: CMakeLists.txt  func.s  funcs.c  main.cpp
assembly_learning/exam_exersise/pre_exam/: CBFT.cpp  CBFT.s  copy.txt  main.c  main.cpp  main.s
assembly_learning/hopity/asm tasks/asm task 2/: command.txt
assembly_learning/hopity/asm tasks/asm task 2 demo/: asm_program.s  main.cpp  program.c  program.s  test_asm_program.s  test_main.cpp
assembly_learning/hopity/asm tasks/markov algorithms tasks/: binary_product.nma  binary_sum.nma  product_of_two_numbers.nma
assembly_learning/hopity/asm tasks/turing tasks/: binary_sum.tur  product_of_two_numbers.tur  product_of_x_and_3.tur  product_of_x_and_xmod3.tur  string_reverse.tur  string_transformation.tur  sum_of_x_and_3.tur
assembly_learning/hopity/code/sem_1/: .mstore.s.swp  (+5 more)
assembly_learning/sem_compile_test/: .mstore.s.swp  main.cpp  mstore.c  mstore.s  obj.txt
assembly_learning/sem_exercises/1/: move.c  move.s
assembly_learning/sem_exercises/2/: logic-arythm.txt  pointers_casting.txt
assembly_learning/sem_exercises/3_flow_control/: task1.txt
assembly_learning/sem_exercises/4_jump/: loop.s  loop.text
assembly_learning/sem_exercises/5_switch_and_cycles/: switcher.c  switcher.s
assembly_learning/sem_exercises/6_strlen/: CMakeLists.txt  main.cpp  str_len.c  str_len_hopity.s  str_len_niyaz.s
assembly_learning/sem_exercises/7/: p-main.i  p-main.s  p-swap.i  p-swap.s  swap.c
assembly_learning/sem_exercises/9/: main.c  main.s
formal_algo/markov/дз/: удвоение_двоичной_записи.nma  удвоение_единичной_записи.nma
formal_algo/turing/дз/: сложение_двоичных.tur  умножение_единичных.tur
formal_algo/turing/сем/: string_reverse.tur  четность_единиц.tur
logic_elements/: CMakeLists.txt
logic_elements/lib/Graph_lib/: GUI.cpp  GUI.h  Graph.cpp  Graph.h  Point.h  Simple_window.h  Window.h  fltk.h
logic_elements/lib/extra_lib/Graph/: Graph_ext.h
logic_elements/lib/extra_lib/logic/: logic_ext.cpp  logic_ext.h  logic_shapes_ext.cpp  logic_shapes_ext.h
logic_elements/lib/extra_lib/logic/multi_output/: decoder_elem.cpp  decoder_elem.h  decoder_elem_shape.cpp  decoder_elem_shape.h  multi_output_logic.cpp  multi_output_logic.h  multi_output_logic_shapes.cpp  multi_output_logic_shapes.h  utils.cpp  utils.h
logic_elements/lib/logic_lib/: logic.cpp  logic.h  logic_shapes.cpp  logic_shapes.h
logic_elements/schemes/beautiful_decoder/: CMakeLists.txt  decoder.cpp
logic_elements/schemes/decoder_variety/: CMakeLists.txt  decoder.cpp
(+141 files in other folders)
